--- a/html/casosExito.html
+++ b/html/casosExito.html
@@ -143,7 +143,7 @@
             <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
         <p class="text-center text-white">©2021. We love our users!</p>
-    </footer>>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
